fix: align gratitudes url among cards

--- a/client/src/modules/MentorsHallOfFame/components/MentorCard/MentorCard.module.css
+++ b/client/src/modules/MentorsHallOfFame/components/MentorCard/MentorCard.module.css
@@ -1,5 +1,13 @@
 .card {
   height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.card :global(.ant-card-body) {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
 }
 
 .rankBadge :global(.ant-badge-count) {
